crates/jolt_java_syntax/tests/snapshots/corpus__syntax__recovery__argument_list.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class C { void m() { call(first, /* orphan */ , second); } }

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "C" @ 6..7 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 8..9 trailing=[Whitespace " "]
        ClassBodyMemberList
          MethodDeclaration
            VoidType
              VoidKw "void" @ 10..14 trailing=[Whitespace " "]
            Identifier "m" @ 15..16
            LParen "(" @ 16..17
            RParen ")" @ 17..18 trailing=[Whitespace " "]
            Block
              LBrace "{" @ 19..20 trailing=[Whitespace " "]
              BlockStatementList
                BlockStatement
                  ExpressionStatement
                    MethodInvocationExpression
                      UnqualifiedMethodInvocation
                        NameExpression
                          Identifier "call" @ 21..25
                        ArgumentList
                          LParen "(" @ 25..26
                          ExpressionList
                            NameExpression
                              Identifier "first" @ 26..31
                            Comma "," @ 31..32 trailing=[Whitespace " ", BlockComment "/* orphan */", Whitespace " "]
                            BogusExpression
                            Comma "," @ 46..47 trailing=[Whitespace " "]
                            NameExpression
                              Identifier "second" @ 48..54
                          RParen ")" @ 54..55
                    Semicolon ";" @ 55..56 trailing=[Whitespace " "]
              RBrace "}" @ 57..58 trailing=[Whitespace " "]
        RBrace "}" @ 59..60
  Eof "" @ 61..61 leading=[Newline "\n"]

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=46..47 message="expected expression"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(46), end: TextSize(47) }) message=expected expression
