crates/jolt_java_syntax/tests/snapshots/corpus__syntax__recovery__binary_expression.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class C { void m() { value + /* rhs */ ; } }

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "C" @ 6..7 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 8..9 trailing=[Whitespace " "]
        ClassBodyMemberList
          ClassBodyDeclaration
            MethodDeclaration
              VoidType
                VoidKw "void" @ 10..14 trailing=[Whitespace " "]
              Identifier "m" @ 15..16
              LParen "(" @ 16..17
              RParen ")" @ 17..18 trailing=[Whitespace " "]
              Block
                LBrace "{" @ 19..20 trailing=[Whitespace " "]
                BlockStatementList
                  BlockStatement
                    ExpressionStatement
                      ErrorNode
                        BinaryExpression
                          NameExpression
                            Identifier "value" @ 21..26 trailing=[Whitespace " "]
                          Plus "+" @ 27..28 trailing=[Whitespace " ", BlockComment "/* rhs */", Whitespace " "]
                          ErrorNode
                      Semicolon ";" @ 39..40 trailing=[Whitespace " "]
                RBrace "}" @ 41..42 trailing=[Whitespace " "]
        RBrace "}" @ 43..44
  Eof "" @ 45..45 leading=[Newline "\n"]

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=39..40 message="expected expression"
  code=java.parse.invalid_statement_expression severity=Error stage=Parser range=39..40 message="expected statement expression"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(39), end: TextSize(40) }) message=expected expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(39), end: TextSize(40) }) message=expected statement expression
