crates/jolt_java_syntax/tests/snapshots/corpus__syntax__recovery__block_statement.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class C { void m() { int value = /* keep */ ; } }

syntax:
syntax:
CompilationUnit
  ClassDeclaration
    ClassKw "class" @ 0..5 trailing=[Whitespace " "]
    Identifier "C" @ 6..7 trailing=[Whitespace " "]
    ClassBody
      LBrace "{" @ 8..9 trailing=[Whitespace " "]
      ClassBodyDeclaration
        MethodDeclaration
          VoidType
            VoidKw "void" @ 10..14 trailing=[Whitespace " "]
          Identifier "m" @ 15..16
          LParen "(" @ 16..17
          RParen ")" @ 17..18 trailing=[Whitespace " "]
          Block
            LBrace "{" @ 19..20 trailing=[Whitespace " "]
            BlockStatement
              LocalVariableDeclaration
                PrimitiveType
                  IntKw "int" @ 21..24 trailing=[Whitespace " "]
                VariableDeclaratorList
                  VariableDeclarator
                    Identifier "value" @ 25..30 trailing=[Whitespace " "]
                    Assign "=" @ 31..32 trailing=[Whitespace " ", BlockComment "/* keep */", Whitespace " "]
                    VariableInitializer
                      ErrorNode
              Semicolon ";" @ 44..45 trailing=[Whitespace " "]
            RBrace "}" @ 46..47 trailing=[Whitespace " "]
      RBrace "}" @ 48..49
  Eof "" @ 50..50 leading=[Newline "\n"]

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=44..45 message="expected expression"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(44), end: TextSize(45) }) message=expected expression
